--- a/main.html
+++ b/main.html
@@ -4,11 +4,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <title>JVRP: Just a variety of resourcepacks</title>
     <link rel="icon" href="./resources/JVRP.ico">
+    <link rel="prefetch" href="./resources/background/dark/beacon.png">
+    <link rel="prefetch" href="./resources/background/dark/house.png">
+    <link rel="prefetch" href="./resources/background/dark/lake.png">
+    <link rel="prefetch" href="./resources/background/dark/pyramid.png">
+    <link rel="prefetch" href="./resources/background/dark/truck.png">
+    <link rel="prefetch" href="./resources/background/dark/window.png">
+    <link rel="prefetch" href="./resources/background/light/beacon.png">
+    <link rel="prefetch" href="./resources/background/light/house.png">
+    <link rel="prefetch" href="./resources/background/light/hotel.png">
+    <link rel="prefetch" href="./resources/background/light/pyramid.png">
+    <link rel="prefetch" href="./resources/background/light/truck.png">
+    <link rel="prefetch" href="./resources/background/light/statue.png">
 </head>
 <body>
     <section id="class" class="hat">
         <div class="hat-trigger dropMenu dropMenuPlus"></div>
-        <input class="dropMenu dropMenuPlus theme-button" type="checkbox" onclick="themeTrigger()" id="theme-button">
+        <button class="dropMenu dropMenuPlus theme-button" onclick="themeTrigger()" id="theme-button"></button>
         <button class="filter-18 dropMenu" onclick="sortEight()"></button>
         <button class="filter-17 dropMenu" onclick="sortSeven()"></button>
         <div class="header">
