--- a/main.html
+++ b/main.html
@@ -137,6 +137,17 @@
                 </section>
             </div>
         </a>
+        <a class="body-block-link" href="./subsites/squidward/squidward.html">
+            <div class="body-block-body">
+                <img class="body-block-image" src="./resources/squid-pack.png">
+                <h1 class="body-block-title">Squidward squid</h1>
+                <div class="body-block-text">Replaced vanilla squid model</div>
+                <section class="body-block-version">
+                    <img class="block-versions-18" src="./resources/ver_18.png">
+                    <img class="block-versions-optifine" src="./resources/optifine.jpg">
+                </section>
+            </div>
+        </a>
     </section>
 </body>
 <footer>
