--- a/main.html
+++ b/main.html
@@ -141,7 +141,18 @@
             <div class="body-block-body">
                 <img class="body-block-image" src="./resources/squid-pack.png">
                 <h1 class="body-block-title">Squidward squid</h1>
-                <div class="body-block-text">Replaced vanilla squid model</div>
+                <div class="body-block-text">Replaces vanilla squid model</div>
+                <section class="body-block-version">
+                    <img class="block-versions-18" src="./resources/ver_18.png">
+                    <img class="block-versions-optifine" src="./resources/optifine.jpg">
+                </section>
+            </div>
+        </a>
+        <a class="body-block-link" href="./subsites/bow/bow.html">
+            <div class="body-block-body">
+                <img class="body-block-image" src="./resources/bow.png">
+                <h1 class="body-block-title">3D bow</h1>
+                <div class="body-block-text">Replaces vanilla model with 3d one</div>
                 <section class="body-block-version">
                     <img class="block-versions-18" src="./resources/ver_18.png">
                     <img class="block-versions-optifine" src="./resources/optifine.jpg">
