--- a/subsites/squidward/squidward.html
+++ b/subsites/squidward/squidward.html
@@ -33,7 +33,7 @@
             <button class="gallery-check" onclick="imgOne()"></button>
             <div class="gallery"></div>
         </section>
-        <div>Replaces default vanilla squid model to squidward model.
+        <div>Replaces default vanilla squid model with squidward model.
             <div style="color: red;">Optifine required!</div></div>
         <section class="body-footer">
             <a class="footer-github" href="https://github.com/Kri0k/jvrp/issues">Have an issue?<img src="../../resources/github.png"></a>
