--- a/main.html
+++ b/main.html
@@ -159,6 +159,17 @@
                 </section>
             </div>
         </a>
+        <a class="body-block-link" href="./subsites/alcopack/alcopack.html">
+            <div class="body-block-body body-block-body-datapack">
+                <img class="body-block-image" src="./resources/alcopack/no-icon.png">
+                <h1 class="body-block-title">Alcopack</h1>
+                <div class="body-block-text">Adds brewable drinks</div>
+                <section class="body-block-version">
+                    <img class="block-versions-18" src="./resources/ver_18.png">
+                    <img class="block-versions-17" src="./resources/ver_17.png">
+                </section>
+            </div>
+        </a>
     </section>
 </body>
 <footer>
